--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></link>
 	<script src="index.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
-	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4fed7250555f73e3" async="async"></script>
+	<!--script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4fed7250555f73e3" async="async"></script-->
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -23,6 +23,8 @@
 	href="pretentiouscat1.gif" />
 	<title>Pretentious-O-Meter</title>
 	<meta name='description' content="Find out whether a film is pure cheese or sophisticated fromage">
+	<meta name="og:image" = 'http://pretentious-o-meter.co.uk/pretentiouscat1.gif'>
+	<meta name="twitter:image" = 'http://pretentious-o-meter.co.uk/pretentiouscat1.gif'>
 	<meta name='author' content="Niall Beard">
 	<meta name='keywords' content="pretentious, film, rating, imdb, rotten tomatoes, critic, public, analysis">
 </head>
@@ -57,8 +59,8 @@
 					</div><!-- /.row -->
 					<br><br>
 					<div class="row">
-						<div class="col-lg-2"></div>
-						<div class="col-lg-8">
+						<div class="col-lg-3"></div>
+						<div class="col-lg-6">
 							<div class="input-group">
 								<input type="text" class="form-control text-center" placeholder="Film Name..." id="name">
 								<span class="input-group-btn">
@@ -73,14 +75,6 @@
 							<input type="checkbox" id='imdb' checked>IMDB</input>
 							<input type="checkbox" id='rt' checked>RottenTomatoes</input>
 						</div>
-					</div>
-				</div>
-				<br>
-				<div class="row">
-					<div class="col-lg-2"></div>
-					<div class="col-lg-8 text-center">
-						Permalink <i id='link-icon' class="glyphicon glyphicon-link"></i>
-						<a id='share-link' class="h4">http://pretentious-o-meter.co.uk</a>
 					</div>
 				</div>
 			</div>
@@ -133,27 +127,47 @@
 										</table>
 								</span>
 							</tr>
+							<tr>
+							<hr>
+							<td>
+							<span class="h4">Permalink  <i id='link-icon' class="glyphicon glyphicon-link"></i></span>
+							<span><a id='share-link' class="h4">http://pretentious-o-meter.co.uk</a></span>
+							</td>
+							<td>
+							 <div class="h4" id='sharing-button-text' style="display:none">Share this films results:</div>
+							 <div class="sharing-button"></div>
+							 </td>
+							 <hr>
+							</tr>
 						</table>
 					</div>
 					<span class="col-lg-4">
+						<div id='film-info' style="display:none; padding-right:5px">
 						<table>
 							<tr>
-								<td style="padding-right:20px">
-									<span id='film-info' style="display:none; padding-right:5px">
-										<span><h3><span id="title"></span></h3> <h4>(<span id='year'></span>)</h4></span>
-										<h4>Critics</h4>
+								<span class="text-center">
+									<span class="h3" id="title"></span><span class="h4"> (<span id='year'></span>)</span>
+								</span>
+								<br><br>
+								</tr>
+								<tr>
+								<td>
+									<img id='poster' style="max-height:275px;"></img>		
+								</td>
+								<td style="padding-left:20px">
+								
+										<h4><u>Critics</u></h4>
 										<b>IMDB Metascore:</b> <div id='meta'></div>
 										<b>RT TomatoMeter:</b> <div id='tomatometer'></div>
-										<h4>Public</h4>
+										<h4><u>Public</u></h4>
 										<b>IMDB Rating:</b> <div id='imdb-score'></div>
 										<b>RT Rating:</b> <div id='rt-rating'></div>
 									</span>
 								</td>
-								<td>
-									<img id='poster' style="max-height:275px;"></img>		
-								</td>
 							</tr>
 						</table>
+						</div>
+
 					</span>
 				</div>
 			</div>
