--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div class="container">
 		<div class="jumbotron">
 			<div class="row">
-				<div class="h1 text-center">Pretentious-O-Meter &nbsp&nbsp<img src="pretentiouscat1.gif" style="max-height:180px"></div>
+				<div class="h1 text-center">Pretentious-O-Meter<img src="pretentiouscat1.gif" class="pretentious-cat"></div>
 				<div class="h4 text-center">Pop in a film name or click an example to find out whether a film is pure cheese or sophisticated fromage.</div>
                 <div class="row examples">
                     <button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
