--- a/index.html
+++ b/index.html
@@ -35,9 +35,20 @@
 		<br>
 		<div class="jumbotron">
 			<div class="row">
-				<div class="h1 text-center">Pretentious-O-Meter &nbsp&nbsp<img src="pretentiouscat1.gif" style="max-height:180px"></div>
-				<div class="h4 text-center">Pop in a film name or click an example to find out 
-					whether a film is pure cheese or sophisticated fromage.</div><br>
+				<table>
+					<tr style="width:70%">				
+						<td>
+							<div class="h1 text-center">Pretentious-O-Meter</div><br>
+							<div class="h4">Pop in a film name or click an example to find out whether a film is pure cheese or sophisticated fromage.</div>
+						</td>
+						<td>
+							<img src="pretentiouscat1.gif" style="max-height:180px"></div>
+						</td>
+					</tr>
+				</table>
+				<br>
+			
+
 					<div class="row">
 						<button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
 						<button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
@@ -72,16 +83,16 @@
 						</div><!-- /.col-lg-6 -->
 					</div><!-- /.col-lg-6 -->
 					<div class="row">
-						<div style="width: 30%; margin: 0 auto;">
-							Use: 
-                            <div class="btn-group" data-toggle="buttons">
+						<div style="width: 35%; margin: 0 auto; float:center">
+							<span class="text-center">Use:</span>
+                            <span class="btn-group" data-toggle="buttons">
                                 <label class="btn btn-default">
                                     <input type="checkbox" id='imdb' autocomplete="off">IMDB
                                 </label>
                                 <label class="btn btn-default active">
-                                    <input type="checkbox" id='rt' autocomplete="off" checked>RottenTomatoes
+                                    <input type="checkbox" id='rt' autocomplete="off" checked>Rotten Tomatoes
                                 </label>
-                            </div>
+                            </span>
 						</div>
 					</div>
 				</div>
