--- a/index.html
+++ b/index.html
@@ -37,8 +37,17 @@
 	<div class="container">
 		<div class="jumbotron">
 			<div class="row">
-				<div class="h1 text-center">Pretentious-O-Meter<img src="pretentiouscat1.gif" class="pretentious-cat"></div>
-				<div class="h4 text-center">Pop in a film name or click an example to find out whether a film is pure cheese or sophisticated fromage.</div>
+
+                <div class="header">
+                    <div class="header-title">
+                        <div class="h1 text-center">Pretentious-O-Meter</div>
+                        <div class="h4 text-center subtitle">Pop in a film name or click an example to find out whether a film is pure cheese or sophisticated fromage.</div>
+                    </div>
+                    <div class="pretentious-cat-container">
+                        <img src="pretentiouscat1.gif" class="pretentious-cat">
+                    </div>
+                </div>
+
                 <div class="row examples">
                     <button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
                     <button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
