--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
                                     <tr style="width:100%;">
                                         <td style="width:50%;">
                                             <div class="progress" style="padding-right: 0px; padding-left: 0px;">
-                                                <div id='mass-market' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%; float:right">
+                                                <div id='mass-market' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%; float:right; background-color: gray">
                                                     <span class="sr-only"></span>
                                                 </div>
                                             </div>
                                         </td>
                                         <td style="width:50%;">
-                                            <div class="progress" style="padding-right: 0px; padding-left: 0px;">
-                                                <div id='pretentious' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                                            <div class="progress" style="padding-right: 0px; padding-left: 0px">
+                                                <div id='pretentious' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%; background-color: gray">
                                                     <span class="sr-only"><i class="glyphicon-play"></i></span>
                                                 </div>
                                             </div>
